# 25_11

./: .gitignore  CHANGES_TODAY.md  README.md  docker-compose.yml  package-lock.json  run_all.ps1  run_all.sh  test_all_services.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
3d-data-service/: Dockerfile  main.py  requirements.txt
api-gateway/: Dockerfile  main.py  requirements.txt
api-gateway/application/: __init__.py  (+1 more)
calculation-engine-service/: Dockerfile  main.py  requirements.txt
common-package/: README.md  pyproject.toml  setup.py
common-package/ifc_common/: __init__.py  result.py  settings.py
cost-calculator-service/: Dockerfile  main.py  requirements.txt
database-manager-service/: Dockerfile  main.py  requirements.txt
docks/: API_EXAMPLES.md  APPLICATION_FLOW.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_MIGRATION_PLAN.md  COST_ARCHITECTURE.md  COST_CALCULATION_FLOW.md  COST_CALCULATION_PLAN.md  COST_USAGE_EXAMPLE.md  DOCKER_SETUP.md  DOCKER_TROUBLESHOOTING.md  DOCUMENTATION_AUDIT.md  ENDPOINTS_AND_MODULES.md  FLOW_DOCUMENTATION.md  FRONTEND_FEATURES.md  FRONTEND_INTEGRATION_ANALYSIS.md  GIT_WORKFLOW_GUIDE.md  INTEGRATION_VERIFICATION.md  LONG_TERM_ANALYSIS.md  MERGE_COMPLETED.md  MIGRATION_PLAN_DETAILED.md  PROJECT_REQUIREMENTS_ANALYSIS.md  QUICK_TEST.md  REPO_SETUP.md  RESTART_GUIDE.md  TEAM_ONBOARDING.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ifc-parser-service/: Dockerfile  main.py  requirements.txt
shared/: __init__.py
(+77 files in other folders)
